--- a/aks-ingress-tls-demo/aks-helloworld.yaml
+++ b/aks-ingress-tls-demo/aks-helloworld.yaml
@@ -41,12 +41,9 @@ spec:
     spec:
       containers:
       - name: aks-helloworld
-        image: neilpeterson/aks-helloworld:v1
+        image: nginx:latest
         ports:
         - containerPort: 80
-        env:
-        - name: TITLE
-          value: "Welcome to Azure Kubernetes Service (AKS)"
         resources:
           limits:
             cpu: 100m
